# echoes

./: index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/styles/: index.css
